test_suite/tests/ui/type-attribute/try_from.stderr
error: failed to parse type: try_from = "Option<T"
 --> tests/ui/type-attribute/try_from.rs:4:20
  |
4 | #[serde(try_from = "Option<T")]
  |                    ^^^^^^^^^^
